[tool.poetry]
name = "thought-recorder-analayzer-be"
version = "0.1.0"
description = ""
authors = ["sepehr-masihpour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
redis = "^5.1.1"
jwt = "^1.3.1"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
pyotp = "^2.9.0"
pymongo = "4.9.0"
motor = "^3.6.0"
datetime = "^5.5"
kavenegar = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
